[project]
name = "mmn16-20940"
version = "0.1.0"
description = "The codebase for assignment 16"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pyotp>=2.9.0",
    "uvicorn[standard]>=0.38.0",
]
